--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,36 @@
 # Site settings
 title: John Park's Website
 description: This is my personal website. 
-# baseurl: "/particle" # the subpath of your site, e.g. /blog
 
-
-# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+# GitHub Pages settings
+baseurl: ""
+url: "https://johnphk.github.io"
 
 # User settings
 username: John Park
 user_description: Hello there! I'm John Park (my legal name is "Hokyun Park"). I'm a software developer with a passion for creating innovative solutions. <br> <br> I'm currently working at CIBC and have experience with various programming languages and frameworks. I'm always eager to learn new technologies and challenge myself with new IT-related skills.<br> <br> Outside of coding, I enjoy exercising and playing active sports — I guess I'm that weirdo who loves being both active and a developer at the same time!
 
-baseurl: ""
-url: ""
 user_title: Software Developer
 user_location: Toronto, Canada
 email: park.hokyun@gmail.com 
 github_username: JohnPHK 
 
+# Jekyll settings
+markdown: kramdown
+highlighter: rouge
+plugins:
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
+  - jekyll-paginate
+
+# Pagination
+paginate: 5
+paginate_path: "/blog/page:num/"
+
 # Google-analytics
 google-analytics:
   id: ""
 
-exclude: ['package.json', 'src' , 'node_modules']
+exclude: ['package.json', 'src' , 'node_modules', 'Gemfile', 'Gemfile.lock']
 
